[package]
name = "crosstalk"
version = "0.2.4"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "An extremely lightweight, topic-based, cross-thread, in-memory communication library"
repository = "https://github.com/arpadav/crosstalk"
documentation = "https://docs.rs/crosstalk"
readme = "README.md"
keywords = ["thread", "channel", "mpmc", "async", "distributed"]
categories = ["concurrency", "algorithms", "data-structures", "memory-management", "aerospace"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
hashbrown = "0.14"
crosstalk-macros = "0.2"
tokio = { version = "1.36", features = ["sync", "time", "rt-multi-thread"] }

[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "test"
harness = false

[patch.crates-io]
crosstalk-macros = { path = "crosstalk-macros" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
