[package]
name = "crosstalk"
version = "0.3.1"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "An extremely lightweight, topic-based, cross-thread, in-memory communication library"
repository = "https://github.com/arpadav/crosstalk"
documentation = "https://docs.rs/crosstalk"
readme = "README.md"
keywords = ["thread", "channel", "mpmc", "async", "distributed"]
categories = ["concurrency", "algorithms", "data-structures", "memory-management", "aerospace"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crosstalk-macros = "0.3.0"
log = { version = "0.4", optional = true}
tracing = { version = "0.1", optional = true }
tokio = { version = "1.42", features = ["sync", "time", "rt-multi-thread"] }

[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.42", features = ["macros", "sync", "time", "rt-multi-thread"] }

[[bench]]
name = "test"
harness = false

[patch.crates-io]
crosstalk-macros = { path = "crosstalk-macros" }

[features]
default = []

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
