[package]
name = "crosstalk"
version = "1.0.0"
authors = ["Arpad Voros <arpadav@gmail.com>"]
license = "MIT"
description = "An extremely lightweight, topic-based, cross-thread, in-memory communication library"
repository = "https://github.com/arpadav/crosstalk"
documentation = "https://docs.rs/crosstalk"
readme = "README.md"
keywords = ["thread", "channel", "mpmc", "async", "distributed"]
categories = ["concurrency", "algorithms", "data-structures", "memory-management", "aerospace"]
edition = "2024"

# --------------------------------------------------
# features
# --------------------------------------------------
[features]
default = []
log = ["dep:log"]
tracing = ["dep:tracing"]

# --------------------------------------------------
# dependencies
# --------------------------------------------------
[dependencies]
crosstalk-macros = "1.0.0"
tokio = { version = "1.44", features = [
    "sync",
    "time",
    "rt-multi-thread",
] }
# --------------------------------------------------
# optional dependencies
# --------------------------------------------------
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

# --------------------------------------------------
# dev dependencies
# --------------------------------------------------
[dev-dependencies]
futures = "0.3"
criterion = { version = "0.5", features = [
    "html_reports"
] }
tokio = { version = "1.44", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }

# --------------------------------------------------
# patches
# --------------------------------------------------
[patch.crates-io]
crosstalk-macros = { path = "macros" }

# --------------------------------------------------
# bench marking (criterion)
# --------------------------------------------------
[[bench]]
name = "test"
harness = false